[project]
name = "algorithm-data-structure-graphviz"
version = "0.1.0"
description = "Curated list of algorithm and data structure problems implemeted in Python and visualized by Graphviz"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.3",
    "attrs==19.3.0",
    "chardet==3.0.4",
    "graphviz==0.20.3",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "mypy>=1.14.0",
    "pyre-check>=0.9.23",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = false
